--- a/src/App.css
+++ b/src/App.css
@@ -5,27 +5,7 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 
 @media (prefers-reduced-motion: no-preference) {
   a:nth-of-type(2) .logo {
@@ -35,8 +15,32 @@
 
 .card {
   padding: 2em;
+  margin: 0;
 }
 
 .read-the-docs {
   color: #888;
+}
+.card-body .card-text {
+  font-size: 1.9rem; /* Tamaño más grande */
+  color: black; /* Color negro */
+  
+}
+
+.card-body {
+  padding: 0;
+  margin: 0;
+}
+
+button {
+  margin: 0; 
+  padding: 2px;
+}
+
+.button-spacing {
+  margin-right: 100px; 
+}
+
+.card-ingredients {
+  font-size: 0.875rem; /* Ajusta el tamaño de la fuente, por ejemplo, 14px */
 }
